# workout-tracker

./: .env.example  .gitignore  README.md  bun.lockb  docker-compose.yml  next.config.mjs  package.json  reset-local-docker.sh  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
API/: API.csproj  API.sln  Startup.cs
API/Controllers/: BodyGroupController.cs  ExerciseController.cs  UserController.cs  (+1 more)
api/: .env  .gitignore  Cargo.toml  package-lock.json  package.json
api/api/: package.json
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/src/: cert.pem  database.rs  index.ts  key.pem  main.rs  model.rs  routes.ts  schema.rs
api/src/controller/: BodyGroupController.ts  ExerciseController.ts  WorkoutController.ts
api/src/entity/: BodyGroup.ts  Exercise.ts  Exercises.ts  User.ts  Workout.ts  Workouts.ts
api/src/scripts/: .gitignore  Exercise.py  requestTest.py
api/src/sslcert/: keytmp.pem
api/src/workout/: workout_controller.rs
app/: app.json  package-lock.json
archive/rust-api/: Cargo.toml  README.md
archive/rust-api/migrations/2023-05-27-155318_create_workout_table/: up.sql
archive/rust-api/src/: model.rs
archive/rust-api/src/workout/: workout_controller.rs
old/: bun.lockb  package.json
prisma/: schema.prisma
public/: image.pngPNGOpen file.desktop
scripts/: Arms.csv  Back.csv  migrate.py
src/: env.mjs
web/: package.json
workout-tracker/: package.json
workout-tracker-web/: bun.lockb  package.json  reset-local-docker-db.sh  tailwind.config.ts
(+126 files in other folders)
